add color to paragraph

--- a/html.html
+++ b/html.html
@@ -1,7 +1,8 @@
 <html>
-    <head><title></title>
+    <head>
+        <title>new title with color</title>
     </head>
     <body>
-        <p>hi acemon</p>
+        <p style="color: #ccc;">this is it</p>
     </body>
 </html>
